name:                why3
version:             0.10
synopsis:            Haskell support for the Why3 input format.
license:             BSD3
license-file:        LICENSE
author:              Galois, Inc.
maintainer:          sjw@galois.com
copyright:           2012, 2014, 2015, Galois Inc.
category:            Languages
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 9.8.4

description: This package implements a partial Why3 language parser and printer.

extra-source-files:
  CHANGELOG.md

Library
  HS-source-dirs: src
  GHC-options: -Wall
  Exposed-modules:
    Language.Why3.AST
    Language.Why3.CSE
    Language.Why3.Lexer
    Language.Why3.Names
    Language.Why3.PP
    Language.Why3.Parser
  Other-modules:
    Language.Why3.LexerUtils
  Build-depends:
    array       >= 0.4 && < 0.6,
    base        >= 4.19.2 && < 4.20,
    bytestring  >= 0.12.1 && < 0.13,
    containers  >= 0.5 && < 0.7,
    deepseq     >= 1.5.1 && < 1.6,
    directory   >= 1.2 && < 1.4,
    filepath    >= 1.3 && < 1.5,
    monadLib    >= 3.7 && < 3.11,
    pretty      >= 1.1 && < 1.2,
    pretty-show >= 1.10 && < 1.11,
    text        >= 2.1.1 && < 2.2

  build-tools: alex, happy

source-repository head
  type: git
  location: http://github.com/GaloisInc/why3
